k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nids
  labels:
    app: nids-soc
